# moveline.nvim

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.plugin  README.md  build.rs
src/: core.rs  ffi.rs  lib.rs
