[package]
name = "moveline"
version = "0.3.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "A neovim plugin to move lines up and down"
repository = "https://github.com/willothy/moveline.nvim"
license = "MIT"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-utils = { version = "0.1.12" }
mlua = { version = "0.8.7", features = ["luajit", "vendored", "module"] }

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
